[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Textures/world/Map/map_select_button.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scenes/World/Overworld/Dungeon_Select.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/FFFFORWA.TTF" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 1, 0, 6, 8 )
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 17, 0, 6, 8 )
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 9, 0, 6, 8 )
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="DynamicFont" id=4]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="selector" type="Button"]
margin_right = 16.0
margin_bottom = 16.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="dungeon_name" type="Label" parent="."]
visible = false
margin_left = -28.0
margin_top = -12.0
margin_right = 44.0
margin_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_selector_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_selector_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_selector_pressed"]
